# ChangeLog for net-im/linpopup
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/linpopup/ChangeLog,v 1.7 2004/04/23 10:21:27 aliz Exp $

  23 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> linpopup-2.0.2.ebuild:
  Unmask on x86, added IUSE and removed S=

*linpopup-2.0.3 (24 Mar 2004)

  24 Mar 2004; Martin Holzer <mholzer@gentoo.org> linpopup-2.0.3.ebuild:
  Version bumped. Closes 45596

*linpopup-2.0.2 (25 Sep 2003)

  25 Sep 2003; Martin Holzer <mholzer@gentoo.org> linpopup-2.0.2.ebuild,
  files/linpopup.desktop:
  Version bumped. Ebuild submitted by Nicholas D. Wolfwood
  <wolfwood@users.sourceforge.net> in #29474.

*linpopup-1.2.0 (04 Jan 2002)

  04 Jan 2002; Martin Holzer <mholzer@gentoo.org> linpopup-1.2.0.ebuild files/digest-linpopup-1.2.0 ChangeLog :
  Initial Version submitted by m@lcolm.org.uk in #11861.
