@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/linpopup/Attic/linpopup-1.2.0.ebuild,v 1.3 2003/09/05 23:58:58 msterret Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/linpopup/Attic/linpopup-1.2.0.ebuild,v 1.4 2004/05/09 11:30:58 sejo Exp $
 
 MY_P=LinPopUp-${PV}
 DESCRIPTION="LinPopUp, for sending/receiving WinPopup messages via Samba"
