@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/linpopup/Attic/linpopup-2.0.3.ebuild,v 1.1 2004/03/24 16:44:43 mholzer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/linpopup/Attic/linpopup-2.0.3.ebuild,v 1.2 2004/05/09 11:30:58 sejo Exp $
 
 inherit gnome2
 
@@ -12,7 +12,7 @@ RESTRICT="nomirror"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="~x86 ~ppc"
 
 RDEPEND=">=x11-libs/gtk+-2
 	>=dev-libs/glib-2
