@@ -1,6 +1,9 @@
 # ChangeLog for net-im/linpopup
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/linpopup/ChangeLog,v 1.7 2004/04/23 10:21:27 aliz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/linpopup/ChangeLog,v 1.8 2004/05/09 11:30:58 sejo Exp $
+
+  09 May 2004; <SeJo@gentoo.org> linpopup-2.0.3.ebuild:
+  added ~ppc keyword
 
   23 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> linpopup-2.0.2.ebuild:
   Unmask on x86, added IUSE and removed S=
